# homelab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bootstrap.md  db.sqlite3  justfile  manage.py  pyproject.toml  pytest.ini
deploy/: .vault_password  ansible.cfg  deploy-all.yml  deploy-app.yml  deploy-dyndns.yml  deploy-pihole.yml  deploy-split-dns.yml  deploy-traefik.yml  deploy-unbound.yml  deploy.yml  fix-pihole-dns.yml  secrets.yml  test-auth.sh  vars.yml
deploy/host_vars/: macmini.yml
deploy/inventory/: hosts.yml
deploy/tasks/: dns-server.yml  pihole-fix-upstream.yml  pihole-update-dns.yml  traefik.yml  unbound.yml
deploy/templates/: 02-local-wildcard.conf.j2  03-tailscale.conf.j2  ddns-gandi.env.j2  ddns-home.service.j2  ddns-home.sh.j2  ddns-home.timer.j2  env.template.j2  homelab.traefik.yml.j2  pihole-setupVars.conf.j2  pihole-whitelist.sql.j2  systemd.service.j2  traefik.service.j2  traefik.toml.j2  unbound-local-zones.conf.j2  unbound-split-dns.conf.j2  verify-split-dns.sh.j2
docs/: admin.md  ansible.md  api.md  conf.py  configuration.md  contributing.md  deployment.md  development.md  index.rst  installation.md  models.md  quickstart.md  services.md  settings.md  split-dns-final-implementation.md  split-dns-implementation.md  split-dns-setup-complete.md  testing.md  traefik-auth.md  troubleshooting.md  usage.md
docs/_build/html/: .buildinfo  (+11 more)
homelab/: asgi.py  settings.py  urls.py  wsgi.py
src/config/: urls.py  wsgi.py
tests/: conftest.py
tests/core/: test_add_default_services.py  test_models.py  test_views.py
(+38 files in other folders)
