[project]
name = "homelab"
version = "0.1.0"
description = "Home infrastructure and services management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-environ",
    "whitenoise",
    "granian",
    "gunicorn",
]

[tool.uv]
dev-dependencies = [
    "pytest-django",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "django-debug-toolbar",
    "django-extensions",
    "ipython",
    "sphinx",
    "furo",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "myst-parser",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--no-migrations",
    "--reuse-db",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "src/config/settings/*",
    "src/config/wsgi.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
